- Panel does not adhere to 'fullwidth' property when using 
  vertical orientation after restarting (bug #4456).
- Implement SmRestartImmediately (bug #4516).
- Reverse the order of the launcher menu when the panel is on 
  the top of the screen (bug #4450).
- Don't spawn zombies (bug #4490).
- Quote commands in the launcher when selecting an application 
  (bug #4507, bug #4549).


4.5.91
======
- Remove MCS plugin, MCS is deprecated.
- Use changed signal on GtkIconTheme for theme changes (bug #4474).
- Fix crach when removing a panel (bug #4401).
- Fix glib 2.14 dependency (bug #4376).


4.5.90
======
- This fixes bug #4401 (xfce4-panel halted when a panel was removed)
- Fix window manager hints reporting width 1 pixel too wide (bug #3402).
  (Jasper)
- Make itembar not care about expanded items when panel is not full width.
  (Jasper)
- Separator can have different styles: space, expanded space, line (default),
  handle and old-style dotted handle. Initial patch by Landry Breuil. (Jasper)
- Complete rewrite of the clock plugin. (Nick)
- Rewrite of the system tray plugin. This should fix the icon size problems
  (Bugs 3213, 3176, 962, 3478 and 3417), add option to hide icons in the
  tray, sort icons by application name and support multiple lines based on the
  panel size. The tray manager code is now integrated in the plugin, so it
  can be removed from libxfcegui4. (Nick)
- Fix area that is off-limits to other windows (_NET_WM_STRUT hints) for a
  Xinerama setup with differently sized monitors (Bug #3097). (Jasper)
- Completely rewritten launcher (Bugs 2336, 2365, 1323, 2262 and 1225)
- Various improvements in libxfce4panel (memory leaks, G_GNUC_INTERNAL,
  GSList, visibility support, canonical strings and fixed pedantic warnings).
- Libxfce4panel does no longer depend on libxfcegui4. This might cause
  some problems with plugins. Plugin developers should add libxfcegui4
  to the dependencies of their package (including cflags and libadd in
  the makefiles).