@@ -11,6 +11,7 @@
 - Don't spawn zombies (bug #4490).
 - Quote commands in the launcher when selecting an application 
   (bug #4507, bug #4549).
+- Restore panel workspace names after panel restart (bug #4589).
 
 
 4.5.91
